--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,9 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       working-directory: ${{env.working-directory}}
     -
+      name: Checkout
+      uses: actions/checkout@v2
+    -
       name: Set up QEMU
       uses: docker/setup-qemu-action@v1    
     -
