--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,11 +47,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
       name: Build and push
-      id: docker_build
       uses: docker/build-push-action@v2
       with:
+          context: .
           push: true
           tags: user/app:latest
-    -
-      name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
